[tool.poetry]
name = "mystrom"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.4"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.5"
prometheus-client = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
